// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CreateAccount renders CreateAccount component 1`] = `
<div
  className="root"
>
  <h2>
    <mock-FormattedMessage
      defaultMessage="Quick Checkout When You Return"
      id="checkoutPage.quickCheckout"
    />
  </h2>
  <p>
    <mock-FormattedMessage
      defaultMessage="Set a password and save your information for next time in one easy step!"
      id="checkoutPage.setAPasswordAndSave"
    />
  </p>
  <FormError
    errors={Array []}
  />
  <form
    className="form"
    onKeyDown={[Function]}
    onReset={[Function]}
    onSubmit={[Function]}
  >
    <div
      className="root"
    >
      <label
        className="label"
      >
        First Name
      </label>
      <span
        className="root"
        style={
          Object {
            "--iconsAfter": 0,
            "--iconsBefore": 0,
          }
        }
      >
        <span
          className="input"
        >
          <input
            aria-label="First Name Required"
            autoComplete="given-name"
            className="input"
            id="customer.firstname"
            name="customer.firstname"
            onBlur={[Function]}
            onChange={[Function]}
            value="Avatar"
          />
        </span>
        <span
          className="before"
        />
        <span
          aria-hidden="false"
          className="after"
        />
      </span>
      <p
        className="root"
      />
    </div>
    <div
      className="root"
    >
      <label
        className="label"
      >
        Last Name
      </label>
      <span
        className="root"
        style={
          Object {
            "--iconsAfter": 0,
            "--iconsBefore": 0,
          }
        }
      >
        <span
          className="input"
        >
          <input
            aria-label="Last Name Required"
            autoComplete="family-name"
            className="input"
            id="customer.lastname"
            name="customer.lastname"
            onBlur={[Function]}
            onChange={[Function]}
            value="Aang"
          />
        </span>
        <span
          className="before"
        />
        <span
          aria-hidden="false"
          className="after"
        />
      </span>
      <p
        className="root"
      />
    </div>
    <div
      className="root"
    >
      <label
        className="label"
      >
        Email
      </label>
      <span
        className="root"
        style={
          Object {
            "--iconsAfter": 0,
            "--iconsBefore": 0,
          }
        }
      >
        <span
          className="input"
        >
          <input
            aria-label="Email Required"
            autoComplete="email"
            className="input"
            id="customer.email"
            name="customer.email"
            onBlur={[Function]}
            onChange={[Function]}
            value="thelastairbender@example.com"
          />
        </span>
        <span
          className="before"
        />
        <span
          aria-hidden="false"
          className="after"
        />
      </span>
      <p
        className="root"
      />
    </div>
    <div
      className="root"
    >
      <label
        className="label"
        htmlFor="Password"
      >
        Password
      </label>
      <span
        className="root"
        style={
          Object {
            "--iconsAfter": 1,
            "--iconsBefore": 0,
          }
        }
      >
        <span
          className="input"
        >
          <input
            aria-label="Password Required"
            autoComplete="new-password"
            className="input"
            id="password"
            name="password"
            onBlur={[Function]}
            onChange={[Function]}
            type="password"
            value=""
          />
        </span>
        <span
          className="before"
        />
        <span
          aria-hidden="false"
          className="after"
        >
          <button
            className="passwordButton"
            disabled={false}
            onClick={[Function]}
            onDragStart={[Function]}
            onKeyDown={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchCancel={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            type="button"
          >
            <span
              className="content"
            >
              <svg
                aria-label="View Password"
                fill="none"
                height={24}
                stroke="currentColor"
                strokeLinecap="round"
                strokeLinejoin="round"
                strokeWidth="2"
                viewBox="0 0 24 24"
                width={24}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M17.94 17.94A10.07 10.07 0 0 1 12 20c-7 0-11-8-11-8a18.45 18.45 0 0 1 5.06-5.94M9.9 4.24A9.12 9.12 0 0 1 12 4c7 0 11 8 11 8a18.5 18.5 0 0 1-2.16 3.19m-6.72-1.07a3 3 0 1 1-4.24-4.24"
                />
                <line
                  x1="1"
                  x2="23"
                  y1="1"
                  y2="23"
                />
              </svg>
            </span>
          </button>
        </span>
      </span>
      <p
        className="root"
      />
    </div>
    <div
      className="subscribe"
    >
      <label
        className="root"
        htmlFor="subscribe"
      >
        <input
          checked={false}
          className="input"
          id="subscribe"
          name="subscribe"
          onBlur={[Function]}
          onChange={[Function]}
          type="checkbox"
        />
        <span
          className="icon"
        >
          <svg
            fill="none"
            height={24}
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="2"
            viewBox="0 0 24 24"
            width={24}
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              height="18"
              rx="2"
              ry="2"
              width="18"
              x="3"
              y="3"
            />
          </svg>
        </span>
        <span
          className="label"
        >
          Subscribe to news and updates
        </span>
      </label>
      <p
        className="root"
      />
    </div>
    <div
      className="actions"
    >
      <button
        className="create_account_button"
        disabled={false}
        onClick={[Function]}
        onDragStart={[Function]}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchCancel={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        type="submit"
      >
        <span
          className="content"
        >
          <mock-FormattedMessage
            defaultMessage="Create Account"
            id="checkoutPage.createAccount"
          />
        </span>
      </button>
    </div>
  </form>
</div>
`;

exports[`CreateAccount renders errors 1`] = `
<div
  className="root"
>
  <h2>
    <mock-FormattedMessage
      defaultMessage="Quick Checkout When You Return"
      id="checkoutPage.quickCheckout"
    />
  </h2>
  <p>
    <mock-FormattedMessage
      defaultMessage="Set a password and save your information for next time in one easy step!"
      id="checkoutPage.setAPasswordAndSave"
    />
  </p>
  <FormError
    errors={
      Array [
        [Error: Oops.],
      ]
    }
  />
  <form
    className="form"
    onKeyDown={[Function]}
    onReset={[Function]}
    onSubmit={[Function]}
  >
    <div
      className="root"
    >
      <label
        className="label"
      >
        First Name
      </label>
      <span
        className="root"
        style={
          Object {
            "--iconsAfter": 0,
            "--iconsBefore": 0,
          }
        }
      >
        <span
          className="input"
        >
          <input
            aria-label="First Name Required"
            autoComplete="given-name"
            className="input"
            id="customer.firstname"
            name="customer.firstname"
            onBlur={[Function]}
            onChange={[Function]}
            value="Avatar"
          />
        </span>
        <span
          className="before"
        />
        <span
          aria-hidden="false"
          className="after"
        />
      </span>
      <p
        className="root"
      />
    </div>
    <div
      className="root"
    >
      <label
        className="label"
      >
        Last Name
      </label>
      <span
        className="root"
        style={
          Object {
            "--iconsAfter": 0,
            "--iconsBefore": 0,
          }
        }
      >
        <span
          className="input"
        >
          <input
            aria-label="Last Name Required"
            autoComplete="family-name"
            className="input"
            id="customer.lastname"
            name="customer.lastname"
            onBlur={[Function]}
            onChange={[Function]}
            value="Aang"
          />
        </span>
        <span
          className="before"
        />
        <span
          aria-hidden="false"
          className="after"
        />
      </span>
      <p
        className="root"
      />
    </div>
    <div
      className="root"
    >
      <label
        className="label"
      >
        Email
      </label>
      <span
        className="root"
        style={
          Object {
            "--iconsAfter": 0,
            "--iconsBefore": 0,
          }
        }
      >
        <span
          className="input"
        >
          <input
            aria-label="Email Required"
            autoComplete="email"
            className="input"
            id="customer.email"
            name="customer.email"
            onBlur={[Function]}
            onChange={[Function]}
            value="thelastairbender@example.com"
          />
        </span>
        <span
          className="before"
        />
        <span
          aria-hidden="false"
          className="after"
        />
      </span>
      <p
        className="root"
      />
    </div>
    <div
      className="root"
    >
      <label
        className="label"
        htmlFor="Password"
      >
        Password
      </label>
      <span
        className="root"
        style={
          Object {
            "--iconsAfter": 1,
            "--iconsBefore": 0,
          }
        }
      >
        <span
          className="input"
        >
          <input
            aria-label="Password Required"
            autoComplete="new-password"
            className="input"
            id="password"
            name="password"
            onBlur={[Function]}
            onChange={[Function]}
            type="password"
            value=""
          />
        </span>
        <span
          className="before"
        />
        <span
          aria-hidden="false"
          className="after"
        >
          <button
            className="passwordButton"
            disabled={false}
            onClick={[Function]}
            onDragStart={[Function]}
            onKeyDown={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchCancel={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            type="button"
          >
            <span
              className="content"
            >
              <svg
                aria-label="View Password"
                fill="none"
                height={24}
                stroke="currentColor"
                strokeLinecap="round"
                strokeLinejoin="round"
                strokeWidth="2"
                viewBox="0 0 24 24"
                width={24}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M17.94 17.94A10.07 10.07 0 0 1 12 20c-7 0-11-8-11-8a18.45 18.45 0 0 1 5.06-5.94M9.9 4.24A9.12 9.12 0 0 1 12 4c7 0 11 8 11 8a18.5 18.5 0 0 1-2.16 3.19m-6.72-1.07a3 3 0 1 1-4.24-4.24"
                />
                <line
                  x1="1"
                  x2="23"
                  y1="1"
                  y2="23"
                />
              </svg>
            </span>
          </button>
        </span>
      </span>
      <p
        className="root"
      />
    </div>
    <div
      className="subscribe"
    >
      <label
        className="root"
        htmlFor="subscribe"
      >
        <input
          checked={false}
          className="input"
          id="subscribe"
          name="subscribe"
          onBlur={[Function]}
          onChange={[Function]}
          type="checkbox"
        />
        <span
          className="icon"
        >
          <svg
            fill="none"
            height={24}
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="2"
            viewBox="0 0 24 24"
            width={24}
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              height="18"
              rx="2"
              ry="2"
              width="18"
              x="3"
              y="3"
            />
          </svg>
        </span>
        <span
          className="label"
        >
          Subscribe to news and updates
        </span>
      </label>
      <p
        className="root"
      />
    </div>
    <div
      className="actions"
    >
      <button
        className="create_account_button"
        disabled={false}
        onClick={[Function]}
        onDragStart={[Function]}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchCancel={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        type="submit"
      >
        <span
          className="content"
        >
          <mock-FormattedMessage
            defaultMessage="Create Account"
            id="checkoutPage.createAccount"
          />
        </span>
      </button>
    </div>
  </form>
</div>
`;
